# ai4ls_2_water_prediction

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
Task_2/: CSR_GRACE.ipynb
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: README.md  add_exogenous_features.ipynb  compare_models_on_train_val_set.ipynb  ehyd_data_preprocessing.ipynb  explore_and_plot_temperature_data.ipynb  forecast_487_data_part5.ipynb  forecast_final_487_data_points.ipynb  groundwater_level_preprocess.ipynb  groundwater_level_preprocess_part3.ipynb  gw_test_results.csv  gw_training_prediction .ipynb  gw_training_prediction.ipynb  gw_training_prediction_part4.ipynb  preprocess_gw_temperature.ipynb  smape_scores.csv  temp_preprocess_part1.ipynb
notebooks/data/ehyd/ehyd_messstellen_1_gw_Burgenland/Grundwasserstand-Jahresmaxima/: Grundwasserstand-Jahresmaxima-300137.csv  Grundwasserstand-Jahresmaxima-305524.csv
notebooks/data/ehyd/ehyd_messstellen_1_gw_Burgenland/Grundwasserstand-Jahresminima/: Grundwasserstand-Jahresminima-300137.csv  Grundwasserstand-Jahresminima-305524.csv
notebooks/data/ehyd/ehyd_messstellen_1_gw_Burgenland/Grundwassertemperatur-Monatsmittel/: Grundwassertemperatur-Monatsmittel-305540.csv  Grundwassertemperatur-Monatsmittel-305706.csv
pipeline/: README.md  add_exogenous.py  forecast.py  predictions-320853.csv  predictions-321588.csv  predictions-335141.csv  preprocess_temp.py  recursive_temp_pred.py  use_functions.py
results/: gw_test.csv  smape_score.csv
supplemental_material_for_task_2/: CSR_GRACE.ipynb
(+12 files in other folders)
