[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ai4ls_2_water_prediction"
version = "0.0.1"
description = "h:The teams are asked to forecast the groundwater levels for selected geographical locations within Austria"
authors = [
  { name = "[LS AI2] CTeam - Water Prediction" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ai4ls_2_water_prediction"]
force_sort_within_sections = true
